# src/swagger.yaml
@@ -83,8 +83,8 @@ paths:
           in: path
           required: true
       responses:
-        '202':
-          description: Accepted
+        '201':
+          description: Created
         '400':
           description: Bad request
         '403':
@@ -111,8 +111,8 @@ paths:
           in: body
           required: true
       responses:
-        '202':
-          description: Accepted
+        '201':
+          description: Created
         '400':
           description: Bad request
   /admin/best-profession:
